add new website from server na

--- a/xem-phim-moi/ke-trom-mat-trang-4/index.html
+++ b/xem-phim-moi/ke-trom-mat-trang-4/index.html
@@ -1197,7 +1197,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             6
+             7
             </dd>
             <br/>
            </dl>
@@ -1787,18 +1787,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/loi-nguyen-hoi-kin" title="Lời Nguyền Hội Kín">
+          <a class="list-top-movie-link" href="/phim-moi/vi-em-la-chinh-em" title="Vì Em là Chính Em">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/loi-nguyen-hoi-kin-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vi-em-la-chinh-em-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Lời Nguyền Hội Kín
+             Vì Em là Chính Em
             </span>
             <span class="list-top-movie-item-en">
-             Boned
+             Vì Em là Chính Em
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1809,18 +1809,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nguoi-may-009-tieng-goi-cong-ly" title="Người máy 009: Tiếng gọi công lý">
+          <a class="list-top-movie-link" href="/phim-moi/the-courier" title="The Courier">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nguoi-may-009-tieng-goi-cong-ly-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/the-courier-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Người máy 009: Tiếng gọi công lý
+             The Courier
             </span>
             <span class="list-top-movie-item-en">
-             Cyborg 009: Call of Justice
+             The Courier
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1831,40 +1831,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hoa-khoi-va-canh-khuyen" title="Hoa Khôi Và Cảnh Khuyển">
-           <span class="status">
-            HD Lồng Tiếng
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hoa-khoi-va-canh-khuyen-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Hoa Khôi Và Cảnh Khuyển
-            </span>
-            <span class="list-top-movie-item-en">
-             Police Beauty &amp; K9
-            </span>
-            <span class="list-top-movie-item-view">
-             4 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nguoi-hobbit-hanh-trinh-vo-dinh" title="Người Hobbit: Hành trình vô định">
+          <a class="list-top-movie-link" href="/phim-moi/vu-khung-bo-khong-tuong" title="Vụ Khủng Bố Không Tưởng">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nguoi-hobbit-hanh-trinh-vo-dinh-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vu-khung-bo-khong-tuong-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Người Hobbit: Hành trình vô định
+             Vụ Khủng Bố Không Tưởng
             </span>
             <span class="list-top-movie-item-en">
-             The Hobbit: An Unexpected Journey
+             Unthinkable
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1875,21 +1853,43 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/bi-mat-voi-ban-cua-vo" title="Bí Mật Với Bạn Của Vợ">
+          <a class="list-top-movie-link" href="/phim-moi/hoa-vo-don-chi-cua-hedi-va-cokeman" title="Họa vô đơn chí của Hedi và Cokeman">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bi-mat-voi-ban-cua-vo-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hoa-vo-don-chi-cua-hedi-va-cokeman-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Bí Mật Với Bạn Của Vợ
+             Họa vô đơn chí của Hedi và Cokeman
             </span>
             <span class="list-top-movie-item-en">
-             몰래 먹는 그녀
+             The Misadventures of Hedi and Cokeman
             </span>
             <span class="list-top-movie-item-view">
-             4 lượt xem
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/qua-khu" title="Quá Khứ">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/qua-khu-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Quá Khứ
+            </span>
+            <span class="list-top-movie-item-en">
+             The Past
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
