add new website from server na

--- a/xem-phim-moi/ke-trom-mat-trang-3/index.html
+++ b/xem-phim-moi/ke-trom-mat-trang-3/index.html
@@ -1195,7 +1195,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             9
+             10
             </dd>
             <br/>
            </dl>
@@ -1665,84 +1665,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/van-bai-lat-ngua" title="Ván Bài Lật Ngửa">
+          <a class="list-top-movie-link" href="/phim-moi/cuoc-noi-day-cua-tinh-nhan" title="Cuộc nổi dậy của tình nhân">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/van-bai-lat-ngua-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cuoc-noi-day-cua-tinh-nhan-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Ván Bài Lật Ngửa
+             Cuộc nổi dậy của tình nhân
             </span>
             <span class="list-top-movie-item-en">
-             Reindeer Games
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/than-thu-thuan-phuc-ban-trai" title="Thần thú thuần phục bạn trai">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/than-thu-thuan-phuc-ban-trai-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Thần thú thuần phục bạn trai
-            </span>
-            <span class="list-top-movie-item-en">
-             God beast boyfriend taming
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ngay-khai-huyen" title="Ngày Khải Huyền">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ngay-khai-huyen-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Ngày Khải Huyền
-            </span>
-            <span class="list-top-movie-item-en">
-             Doomsday Book
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/benji" title="Benji">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/benji-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Benji
-            </span>
-            <span class="list-top-movie-item-en">
-             Benji
+             Rival of Mistress
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1753,21 +1687,87 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/david-attenboroughs-rise-of-animals-triumph-of-the-vertebrates" title="David Attenborough’s Rise of Animals: Triumph of the Vertebrates">
+          <a class="list-top-movie-link" href="/phim-moi/loi-dai-tu-biet" title="Lời Dài Từ Biệt">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/david-attenboroughs-rise-of-animals-triumph-of-the-vertebrates-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/loi-dai-tu-biet-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             David Attenborough’s Rise of Animals: Triumph of the Vertebrates
+             Lời Dài Từ Biệt
             </span>
             <span class="list-top-movie-item-en">
-             David Attenborough's Rise of Animals: Triumph of the Vertebrates
+             The Remedy
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/nguoi-cha-mau-muc" title="Người Cha Mẫu Mực">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nguoi-cha-mau-muc-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Người Cha Mẫu Mực
+            </span>
+            <span class="list-top-movie-item-en">
+             A Family Man
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/dao-mo-but-ky-2" title="Đạo Mộ Bút Ký">
+           <span class="status">
+            HD Lồng Tiếng
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dao-mo-but-ky-2015-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Đạo Mộ Bút Ký
+            </span>
+            <span class="list-top-movie-item-en">
+             The Lost Tomb
+            </span>
+            <span class="list-top-movie-item-view">
+             0 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/bay-sat-thu" title="Bảy Sát Thủ">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bay-sat-thu-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Bảy Sát Thủ
+            </span>
+            <span class="list-top-movie-item-en">
+             7 Assassins - Glory Days
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
