add new website from server na

--- a/xem-phim-moi/ke-trom-mat-trang-3/index.html
+++ b/xem-phim-moi/ke-trom-mat-trang-3/index.html
@@ -1195,7 +1195,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             10
+             11
             </dd>
             <br/>
            </dl>
@@ -1665,18 +1665,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cuoc-noi-day-cua-tinh-nhan" title="Cuộc nổi dậy của tình nhân">
+          <a class="list-top-movie-link" href="/phim-moi/rising-impact" title="Rising Impact">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cuoc-noi-day-cua-tinh-nhan-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/Rising -mpact-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Cuộc nổi dậy của tình nhân
+             Rising Impact
             </span>
             <span class="list-top-movie-item-en">
-             Rival of Mistress
+             Rising Impact
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1687,87 +1687,87 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/loi-dai-tu-biet" title="Lời Dài Từ Biệt">
+          <a class="list-top-movie-link" href="/phim-moi/tinh-xa-van-kiep" title="Tình Xa Vạn Kiếp">
            <span class="status">
-            HD Vietsub
+            HD Thuyết Minh
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/loi-dai-tu-biet-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tinh-xa-van-kiep-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Lời Dài Từ Biệt
+             Tình Xa Vạn Kiếp
             </span>
             <span class="list-top-movie-item-en">
-             The Remedy
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nguoi-cha-mau-muc" title="Người Cha Mẫu Mực">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nguoi-cha-mau-muc-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Người Cha Mẫu Mực
-            </span>
-            <span class="list-top-movie-item-en">
-             A Family Man
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/dao-mo-but-ky-2" title="Đạo Mộ Bút Ký">
-           <span class="status">
-            HD Lồng Tiếng
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dao-mo-but-ky-2015-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Đạo Mộ Bút Ký
-            </span>
-            <span class="list-top-movie-item-en">
-             The Lost Tomb
-            </span>
-            <span class="list-top-movie-item-view">
-             0 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/bay-sat-thu" title="Bảy Sát Thủ">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bay-sat-thu-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Bảy Sát Thủ
-            </span>
-            <span class="list-top-movie-item-en">
-             7 Assassins - Glory Days
+             Tang Dynasty Tour
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/loc-dinh-ky-1998" title="Lộc Đỉnh Ký 1998">
+           <span class="status">
+            HD Lồng Tiếng
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/loc-dinh-ky-1998-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Lộc Đỉnh Ký 1998
+            </span>
+            <span class="list-top-movie-item-en">
+             The Duke Of Mount Deer
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/werewolves-within" title="Werewolves Within">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/werewolves-within-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Werewolves Within
+            </span>
+            <span class="list-top-movie-item-en">
+             Werewolves Within
+            </span>
+            <span class="list-top-movie-item-view">
+             5 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/chuyen-tinh-cua-anh-chi-em-toi" title="Chuyện Tình Của Anh Chị Em Tôi">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chuyen-tinh-cua-anh-chi-em-toi-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Chuyện Tình Của Anh Chị Em Tôi
+            </span>
+            <span class="list-top-movie-item-en">
+             My Sibling's Romance
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
