add new website from server na

--- a/xem-phim-moi/ke-trom-mat-trang-2/index.html
+++ b/xem-phim-moi/ke-trom-mat-trang-2/index.html
@@ -1187,7 +1187,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             11
+             12
             </dd>
             <br/>
            </dl>
@@ -1690,40 +1690,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/vuong-trieu-tudors-phan-4" title="Vương Triều Tudors (Phần 4)">
+          <a class="list-top-movie-link" href="/phim-moi/lua-chon-cuoi-doi" title="Lựa chọn cuối đời">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/the-tudors-phan-4-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/lua-chon-cuoi-doi-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Vương Triều Tudors (Phần 4)
+             Lựa chọn cuối đời
             </span>
             <span class="list-top-movie-item-en">
-             The Tudors (Season 4)
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nguoi-di-duoi-dia-nguc" title="Người Đi Dưới Địa Ngục">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nguoi-di-duoi-dia-nguc-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Người Đi Dưới Địa Ngục
-            </span>
-            <span class="list-top-movie-item-en">
-             Constantine
+             Extremis
             </span>
             <span class="list-top-movie-item-view">
              0 lượt xem
@@ -1734,18 +1712,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/con-thinh-no-chet-nguoi" title="Cơn Thịnh Nộ Chết Người">
+          <a class="list-top-movie-link" href="/phim-moi/ac-quy" title="Ác Quỷ">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/wrath-of-man-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ac-quy-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Cơn Thịnh Nộ Chết Người
+             Ác Quỷ
             </span>
             <span class="list-top-movie-item-en">
-             Wrath of Man
+             Devil
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/giet-cop-trong-hang" title="Giết cọp trong hang">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/giet-cop-trong-hang-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Giết cọp trong hang
+            </span>
+            <span class="list-top-movie-item-en">
+             To Kill a Tiger
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1756,21 +1756,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/the-age-of-shadows" title="The Age of Shadows">
+          <a class="list-top-movie-link" href="/phim-moi/giang-sinh-da-den" title="Giáng sinh đã đến">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/the-age-of-shadows-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/giang-sinh-da-den-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             The Age of Shadows
+             Giáng sinh đã đến
             </span>
             <span class="list-top-movie-item-en">
-             The Age of Shadows
+             Christmas Time Is Here
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1778,18 +1778,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hoi-phap-su-phan-zero" title="Hội Pháp Sư Phần Zero">
+          <a class="list-top-movie-link" href="/phim-moi/nguoi-la-hoan-hao" title="Người lạ hoàn hảo">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hoi-phap-su-phan-zero-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nguoi-la-hoan-hao-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Hội Pháp Sư Phần Zero
+             Người lạ hoàn hảo
             </span>
             <span class="list-top-movie-item-en">
-             Fairy Tail Zero
+             Perfect Strangers
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
